--- a/lab/01_zasady_wstep.ipynb
+++ b/lab/01_zasady_wstep.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9, 6), (6, 6), (9, 6)]\n"
+     ]
+    }
+   ],
    "source": [
-    "A = np.random.normal(size=???)\n",
-    "B = np.random.normal(size=???)\n",
+    "A = np.random.normal(1, 10, size=(9, np.random.randint(2, 20)))\n",
+    "B = np.random.normal(1, 10, size=(A.shape[1], 6))\n",
     "\n",
-    "C = ???\n",
+    "C = np.matmul(A, B)\n",
     "\n",
     "print([m.shape for m in [A, B, C]])\n",
     "\n",
@@ -124,12 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sigmoid(x: np.ndarray) -> np.ndarray:\n",
-    "    ???\n",
+    "    return 1/(1+pow(np.e, -x))\n",
     "  \n",
     "X = np.random.uniform(low=-10, high=10, size=(1000, 2000))\n",
     "\n",
@@ -139,9 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.7 ms ± 176 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit n=10\n",
     "sigmoid(X)"
@@ -161,13 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.random.uniform(low=-10, high=10, size=(100, 10))\n",
     "\n",
-    "X_hat = ???\n",
+    "X_hat = (X- np.mean(X, axis=0))/np.std(X, axis=0)\n",
+    "\n",
     "\n",
     "assert np.allclose(X_hat.mean(0), 0.)\n",
     "assert np.allclose(X_hat.std(0), 1.)"
@@ -194,11 +211,11 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "X = np.linspace(???)\n",
+    "X = np.linspace(-10, 10, 1000)\n",
     "\n",
-    "Y = ???\n",
+    "Y = sigmoid(X)\n",
     "\n",
-    "plt.plot(???)\n",
+    "plt.plot(X, Y)\n",
     "plt.show()\n"
    ]
   }
