Finish lab2 (with exception to max_grad(X, v))

--- a/lab/01_zasady_wstep.ipynb
+++ b/lab/01_zasady_wstep.ipynb
@@ -52,7 +52,7 @@
     "import numpy as np\n",
     "import scipy\n",
     "import sklearn\n",
-    "#import torch  # uncomment if necessary"
+    "import torch  # uncomment if necessary"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "source": [
     "X = np.random.uniform(low=-10, high=10, size=(100, 10))\n",
     "\n",
-    "X_hat = (X- np.mean(X, axis=0))/np.std(X, axis=0)\n",
+    "X_hat = (X - np.mean(X, axis=0))/np.std(X, axis=0)\n",
     "\n",
     "\n",
     "assert np.allclose(X_hat.mean(0), 0.)\n",
