--- a/lab/04_regresja_logistyczna_pytorch.ipynb
+++ b/lab/04_regresja_logistyczna_pytorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,34 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "err: 15518062592.0, loss 100910.8671875\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Wrong loss returned!",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAssertionError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/yk/k64l2mhn76v6pplzldkddm0c0000gr/T/ipykernel_85745/3246909310.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      8\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34mf\"err: {regularized_regression_loss(X, w, y)}, loss {torch.tensor(100910.8672)}\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      9\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 10\u001B[0;31m \u001B[0mchecker\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcheck_4_1_reg_reg\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mregularized_regression_loss\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mboston_data\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;32m~/Desktop/python/ml2022-23/lab/checker.py\u001B[0m in \u001B[0;36mcheck_4_1_reg_reg\u001B[0;34m(fn, data)\u001B[0m\n\u001B[1;32m    178\u001B[0m \u001B[0;32mdef\u001B[0m \u001B[0mcheck_4_1_reg_reg\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfn\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdata\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    179\u001B[0m     \u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mw\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mdata\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 180\u001B[0;31m     \u001B[0;32massert\u001B[0m \u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mallclose\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfn\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mw\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mtensor\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m100910.8672\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"Wrong loss returned!\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    181\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    182\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mAssertionError\u001B[0m: Wrong loss returned!"
+      "err: 100910.8828125, loss 100910.8671875\n"
      ]
     }
    ],
    "source": [
     "def regularized_regression_loss(X: torch.Tensor, w: torch.Tensor, y: torch.Tensor) -> torch.Tensor:\n",
     "    alpha = 0.2\n",
-    "    t = torch.sum((torch.matmul(X, w) + alpha) - y)**2\n",
-    "    return torch.sum(t) / t.numel()\n",
+    "    return torch.mean((torch.matmul(X, w) - y) ** 2) + alpha * torch.sum(w ** 2)\n",
     "\n",
     "\n",
     "X, y, w = boston_data\n",
@@ -322,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,19 +455,19 @@
     "        \n",
     "    def predict_proba(self, X: torch.Tensor) -> torch.Tensor:\n",
     "        with torch.no_grad():\n",
-    "            return  torch.matmul(X, self.weight) + self.bias\n",
+    "            return torch.matmul(X, self.weight) + self.bias\n",
     "            \n",
     "    def predict(self, X: torch.Tensor) -> torch.FloatTensor:\n",
-    "        return self._sigmoid(X) > 0.5\n",
+    "        return self._sigmoid(X)\n",
     "\n",
     "    def loss(self, X: torch.Tensor, y: torch.Tensor) -> torch.Tensor:\n",
     "        pred = self.predict_proba(X)\n",
-    "        return torch.mean( -(1-y) * torch.log(1- pred) - y*torch.log(pred) )"
+    "        return torch.mean( -(1-y) * torch.log(1- pred) - y * torch.log(pred) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -490,9 +477,9 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/yk/k64l2mhn76v6pplzldkddm0c0000gr/T/ipykernel_85745/1248670355.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mchecker\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcheck_04_logistic_reg\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mLogisticRegression\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m/var/folders/yk/k64l2mhn76v6pplzldkddm0c0000gr/T/ipykernel_90142/1248670355.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mchecker\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcheck_04_logistic_reg\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mLogisticRegression\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
       "\u001B[0;32m~/Desktop/python/ml2022-23/lab/checker.py\u001B[0m in \u001B[0;36mcheck_04_logistic_reg\u001B[0;34m(lr_cls)\u001B[0m\n\u001B[1;32m    188\u001B[0m     \u001B[0minput_dataset\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mutils\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget_classification_dataset_1d\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    189\u001B[0m     \u001B[0mlr\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mlr_cls\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 190\u001B[0;31m     \u001B[0mlr\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfit\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0minput_dataset\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdata\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0minput_dataset\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mtarget\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mlr\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m1e-3\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mnum_steps\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m1e4\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    191\u001B[0m     \u001B[0mreturned\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mlr\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpredict\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0minput_dataset\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdata\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    192\u001B[0m     \u001B[0msave_path\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m\".checker/04/lr_dataset_1d.out.torch\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m/var/folders/yk/k64l2mhn76v6pplzldkddm0c0000gr/T/ipykernel_85745/2312488890.py\u001B[0m in \u001B[0;36mfit\u001B[0;34m(self, X, y, lr, num_steps)\u001B[0m\n\u001B[1;32m     25\u001B[0m             \u001B[0mb_grad\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbias\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mgrad\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     26\u001B[0m             \u001B[0;32mwith\u001B[0m \u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mno_grad\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 27\u001B[0;31m                 \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mweight\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mweight\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0mlr\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mw_grad\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     28\u001B[0m                 \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbias\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbias\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0mlr\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mb_grad\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     29\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/var/folders/yk/k64l2mhn76v6pplzldkddm0c0000gr/T/ipykernel_90142/3683094701.py\u001B[0m in \u001B[0;36mfit\u001B[0;34m(self, X, y, lr, num_steps)\u001B[0m\n\u001B[1;32m     25\u001B[0m             \u001B[0mb_grad\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbias\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mgrad\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     26\u001B[0m             \u001B[0;32mwith\u001B[0m \u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mno_grad\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 27\u001B[0;31m                 \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mweight\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mweight\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0mlr\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mw_grad\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     28\u001B[0m                 \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbias\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbias\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0mlr\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mb_grad\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     29\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
       "\u001B[0;31mTypeError\u001B[0m: unsupported operand type(s) for *: 'float' and 'NoneType'"
      ]
     }
@@ -794,7 +781,7 @@
     "    def backward(self, grad_output):\n",
     "        preds, labels = self.saved_tensors\n",
     "        grad_labels = None\n",
-    "        return grad_labels, (1/preds.shape[0] * (-labels/preds + (1-labels)/(1-preds) )) *  grad_output\n",
+    "        return (1/preds.shape[0] * (-labels/preds + (1-labels)/(1-preds) )) *  grad_output\n",
     "\n",
     "bce_fn = MyBinaryCrossEntropy.apply\n",
     "torch.autograd.gradcheck(bce_fn, (preds, labels), eps=1e-3, atol=1e-2, rtol=1e-1)"
