--- a/lab/07_regularyzacja.ipynb
+++ b/lab/07_regularyzacja.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
     "        self.beta = torch.zeros(num_features)\n",
     "\n",
     "        self.mu = torch.zeros(num_features)\n",
-    "        self.sigma = torch.zeros(num_features)\n",
+    "        self.sigma = torch.ones(num_features)\n",
     "\n",
     "        self.requires_grad_(True)\n",
     "\n",
@@ -280,8 +280,8 @@
     "        if self.training:\n",
     "            x_avg = torch.mean(x, dim=-2)\n",
     "            x_var = torch.var(x, dim=-2)\n",
-    "            self.mu = (1 - self.momentum) * x_avg + self.momentum * self.mu\n",
-    "            self.sigma = (1 - self.momentum) * x_var + self.momentum * self.sigma\n",
+    "            self.mu = (1.0 - self.momentum) * self.mu + self.momentum * x_avg\n",
+    "            self.sigma = (1.0 - self.momentum) * self.sigma + self.momentum * x_var\n",
     "\n",
     "            std = torch.sqrt(x_var + self.eps)\n",
     "            x_centered = x - x_avg\n",
@@ -296,21 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAssertionError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/yk/k64l2mhn76v6pplzldkddm0c0000gr/T/ipykernel_77570/3253045260.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     35\u001B[0m \u001B[0mtest_out\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mbn\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtest_x\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     36\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 37\u001B[0;31m \u001B[0;32massert\u001B[0m \u001B[0mabs\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtest_out\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmean\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;36m0.5\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m<\u001B[0m \u001B[0;36m1e-1\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     38\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     39\u001B[0m \u001B[0mtest_bn\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mBatchNorm\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mAssertionError\u001B[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_bn(BatchNorm)"
    ]
